--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+/* *{
+  /* margin: 0;
+  padding: 0; 
+} 
+*/
+h1,h2,h3,h4{
+  padding: 4px;
+  margin: 0px;
+}
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: dodgerblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header img{
+  width: 150px;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom_btn{
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 6px 25px;
+  margin-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.program_section{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.product_card{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* border: 1px solid black; */
+  padding: 10px;
+  margin: 10px;
+  width: 280px;
+  min-height: 290px;
+  background-color: #f4f4f4;
+  box-shadow: 3px 2px 7px 6px grey,-3px 2px 7px 6px grey;
+
+}
+
+.product_card img{
+  width: 250px;
+}
+
+.product_card p{
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.product_card button{
+  background-color: dodgerblue;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: bold;
 }
